--- a/docs/platform/rate-limiting.mdx
+++ b/docs/platform/rate-limiting.mdx
@@ -91,6 +91,15 @@ Below is a list of the APIs and payloads that may be rate-limited:
         for MCU Projects.
       </td>
     </tr>
+    <tr id="elf-coredumps">
+      <td>Ingestion of ELF Coredumps</td>
+      <td>Device</td>
+      <td>Linux</td>
+      <td>
+        <Link to="/docs/linux/linux-coredumps/">ELF Coredumps</Link> are a
+        source of Issues for Linux Projects.
+      </td>
+    </tr>
     <tr id="bug-reports">
       <td>Ingestion of Bug Reports</td>
       <td>Device</td>
