MFLT-7345 Custom Events UI update (#314)
### Summary
Update Custom Events UI screenshot and content.

### Test plan
Review docs built on pr.

--- a/docs/android/custom-events.mdx
+++ b/docs/android/custom-events.mdx
@@ -25,10 +25,9 @@ The Custom Events feature is a complementary mechanism to log events of interest
 for debugging purposes. Your application and systems code can leverage this to
 log crucial information and get it surfaced in the Memfault UI.
 
-Custom Events appear on the Device Timeline, under "Custom Events". For each
-type of log, a dedicated swimlane is created automatically. Each log is
-represented with a dot. Clicking or hovering over it will reveal the logged JSON
-data:
+Custom Events appear on the Device Timeline. For each type of log, a dedicated
+swimlane is created automatically. Each log is represented with a dot. Clicking
+or hovering over it will reveal the logged JSON data:
 
 ![](/img/docs/android/android-custom-events-min.png)
 
