Fix use of markdown inside html

--- a/docs/linux/linux-coredumps.mdx
+++ b/docs/linux/linux-coredumps.mdx
@@ -188,7 +188,7 @@ to upload symbols][api-docs-upload-symbols].
   </ProjectMagicLink>
   . Note that the symbol files you upload here must be individual ELF files containing
   both the program text as well as debugging symbols. The Yocto-generated debug image
-  (for example in `.tar.bz2` format) contains stripped binaries and (separately)
+  (for example in <code>.tar.bz2</code> format) contains stripped binaries and (separately)
   debug binaries. To upload them to Memfault, you'll need to use the Memfault CLI
   as shown above.
 </p>
