Add diagram for build ids in symbol files (#316)

--- a/docs/mcu/symbol-file-build-ids.mdx
+++ b/docs/mcu/symbol-file-build-ids.mdx
@@ -39,6 +39,8 @@ Build Ids are automatically generated based on the contents of the ELF file.
 Software Type & Version identifiers are manually assigned and therefore
 error-prone.
 
+![](/img/docs/mcu/build-id-symbol-file.excalidraw.png)
+
 :::tip
 
 When uploading a Symbol File (ELF) that has a Build Id embedded, it is possible
